Procpecta coding assignment
